@@ -70,6 +70,7 @@ advice from friends like these:
  Rob Crittenden, Robert A. Monat, Dan Fandrich, Duncan Mac-Vicar Prett,
  Michal Marek, Robson Braga Araujo, Ian Turner, Linus Nielsen Feltzing,
  Ravi Pratap, Adam D. Moss, Jose Kahan, Hang Kin Lau, Justin Fletcher,
- Robert Iakobashvili, Bryan Henderson, Eygene Ryabinkin, Daniel Johnson
+ Robert Iakobashvili, Bryan Henderson, Eygene Ryabinkin, Daniel Johnson,
+ Matt Kraai
 
         Thanks! (and sorry if I forgot to mention someone)
